// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinedResultsToCardsModelConverter with issues 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [
      Object {
        "description": "failed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/failed-rule-1",
            "text": "guidance for failed-rule-1",
          },
        ],
        "id": "failed-rule-1",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-1",
              "css-selector": ".failed-rule-1-selector-1",
              "identifier": ".failed-rule-1-selector-1",
              "urls": Object {
                "urls": Array [
                  "https://example.com/failed-rule-1/only-violation",
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "howToFixSummary": "Fix the failed-rule-1 violation",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-2",
              "css-selector": ".failed-rule-1-selector-2",
              "identifier": ".failed-rule-1-selector-2",
              "urls": Object {
                "urls": Array [
                  "https://example.com/failed-rule-1/violations/1",
                  "https://example.com/failed-rule-1/violations/2",
                  "https://example.com/failed-rule-1/violations/3",
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "howToFixSummary": "Fix the failed-rule-1 violation",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": undefined,
      },
      Object {
        "description": "failed-rule-2 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/failed-rule-2",
            "text": "guidance for failed-rule-2",
          },
        ],
        "id": "failed-rule-2",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-2-selector-1",
              "css-selector": ".failed-rule-2-selector-1",
              "identifier": ".failed-rule-2-selector-1",
              "urls": Object {
                "urls": Array [
                  "https://example.com/failed-rule-2/only-violation",
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "howToFixSummary": "Fix the failed-rule-2 violation",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-2-selector-2",
              "css-selector": ".failed-rule-2-selector-2",
              "identifier": ".failed-rule-2-selector-2",
              "urls": Object {
                "urls": Array [
                  "https://example.com/failed-rule-2/violations/1",
                  "https://example.com/failed-rule-2/violations/2",
                  "https://example.com/failed-rule-2/violations/3",
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "howToFixSummary": "Fix the failed-rule-2 violation",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": undefined,
      },
    ],
    "inapplicable": Array [
      Object {
        "description": "inapplicable-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/inapplicable-rule-1",
            "text": "guidance for inapplicable-rule-1",
          },
        ],
        "id": "inapplicable-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": undefined,
      },
    ],
    "pass": Array [
      Object {
        "description": "passed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/passed-rule-1",
            "text": "guidance for passed-rule-1",
          },
        ],
        "id": "passed-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": undefined,
      },
    ],
    "unknown": Array [],
  },
  "visualHelperEnabled": false,
}
`;

exports[`CombinedResultsToCardsModelConverter without issues 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [],
    "inapplicable": Array [
      Object {
        "description": "inapplicable-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/inapplicable-rule-1",
            "text": "guidance for inapplicable-rule-1",
          },
        ],
        "id": "inapplicable-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": undefined,
      },
      Object {
        "description": "inapplicable-rule-2 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/inapplicable-rule-2",
            "text": "guidance for inapplicable-rule-2",
          },
        ],
        "id": "inapplicable-rule-2",
        "isExpanded": false,
        "nodes": Array [],
        "url": undefined,
      },
    ],
    "pass": Array [
      Object {
        "description": "passed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/passed-rule-1",
            "text": "guidance for passed-rule-1",
          },
        ],
        "id": "passed-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": undefined,
      },
      Object {
        "description": "passed-rule-2 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/passed-rule-2",
            "text": "guidance for passed-rule-2",
          },
        ],
        "id": "passed-rule-2",
        "isExpanded": false,
        "nodes": Array [],
        "url": undefined,
      },
    ],
    "unknown": Array [],
  },
  "visualHelperEnabled": false,
}
`;

exports[`CombinedResultsToCardsModelConverter without passed or inapplicable rules 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [
      Object {
        "description": "failed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/failed-rule-1",
            "text": "guidance for failed-rule-1",
          },
        ],
        "id": "failed-rule-1",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-1",
              "css-selector": ".failed-rule-1-selector-1",
              "identifier": ".failed-rule-1-selector-1",
              "urls": Object {
                "urls": Array [
                  "https://example.com/failed-rule-1/only-violation",
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "howToFixSummary": "Fix the failed-rule-1 violation",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-2",
              "css-selector": ".failed-rule-1-selector-2",
              "identifier": ".failed-rule-1-selector-2",
              "urls": Object {
                "urls": Array [
                  "https://example.com/failed-rule-1/violations/1",
                  "https://example.com/failed-rule-1/violations/2",
                  "https://example.com/failed-rule-1/violations/3",
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "howToFixSummary": "Fix the failed-rule-1 violation",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": undefined,
      },
    ],
    "inapplicable": Array [],
    "pass": Array [],
    "unknown": Array [],
  },
  "visualHelperEnabled": false,
}
`;
